examples/test/testpolicy18854.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18854
  namespace: namespace154
spec:
  podSelector:
    matchLabels:
      key2: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value2
          key25: value1
      podSelector:
        matchLabels:
          key39: value25
          key3: value30
